objects/User.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIC__c</fullName>
        <label>BIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_process_builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass process builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_validation_rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass validation rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Password__c</fullName>
        <label>Email Passwort</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Server__c</fullName>
        <label>Email Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_User__c</fullName>
        <label>Email User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Court__c</fullName>
        <label>Local Court</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Managing_Directors__c</fullName>
        <label>Managing Directors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_User_ID__c</fullName>
        <label>Old User ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>On_Behalf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Im Auftrag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registry_Number__c</fullName>
        <label>Registry Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMTP_Password__c</fullName>
        <label>SMTP Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMTP_Port__c</fullName>
        <label>SMTP Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMTP_Server__c</fullName>
        <label>SMTP Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMTP_User__c</fullName>
        <label>SMTP User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSL_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSL Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_File_ID__c</fullName>
        <label>Signature File ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TLS_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TLS Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vat_Number__c</fullName>
        <label>Vat Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Auto_Email_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>in Analogy to General Settings Metadata Type "Disalbe  Auto Email Sending" should also be able to be disabled for respective User</description>
        <label>Disable Auto Email Sending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendy_Link__c</fullName>
        <label>Calendy Link</label>
        <type>TextArea</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
</CustomObject>